// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Campaign metrics helper tests backfillGraphData should backfill graph data for inner empty data 1`] = `
[
  [
    {
      "x": "Feb 1st",
      "y": 1,
    },
    {
      "x": "Feb 2nd",
      "y": 2,
    },
    {
      "x": "Feb 3rd",
      "y": 3,
    },
  ],
  [
    {
      "x": "Feb 1st",
      "y": 0,
    },
    {
      "x": "Feb 2nd",
      "y": 0,
    },
    {
      "x": "Feb 3rd",
      "y": 0,
    },
  ],
]
`;

exports[`Campaign metrics helper tests backfillGraphData should backfill graph data for missing days 1`] = `
[
  [
    {
      "x": "Jan 31st",
      "y": 0,
    },
    {
      "x": "Feb 1st",
      "y": 1,
    },
    {
      "x": "Feb 2nd",
      "y": 2,
    },
    {
      "x": "Feb 3rd",
      "y": 3,
    },
  ],
  [
    {
      "x": "Jan 31st",
      "y": 0,
    },
    {
      "x": "Feb 1st",
      "y": 0,
    },
    {
      "x": "Feb 2nd",
      "y": 20,
    },
    {
      "x": "Feb 3rd",
      "y": 30,
    },
  ],
  [
    {
      "x": "Jan 31st",
      "y": 0,
    },
    {
      "x": "Feb 1st",
      "y": 100,
    },
    {
      "x": "Feb 2nd",
      "y": 200,
    },
    {
      "x": "Feb 3rd",
      "y": 0,
    },
  ],
]
`;

exports[`Campaign metrics helper tests transformToCampaignsPerformanceTable should not divide by zero for compound metrics 1`] = `
{
  "campaign1": {
    "campaignSalesCount": 0,
    "clickThroughRate": 0,
    "clicks": 0,
    "clicksConversionRate": 0,
    "clicksConverted": 20,
    "clicksRate": 0,
    "clicksRevenue": 0,
    "discountCodesRevenue": 0,
    "discountCodesUsed": 0,
    "engagement": 0,
    "impressions": 0,
    "ticketsConversionRate": 0,
    "ticketsConverted": 60,
    "ticketsCreated": 0,
    "ticketsCreationRate": 0,
    "ticketsRevenue": 0,
    "totalConversionRate": 0,
    "totalRevenue": 0,
    "traffic": 0,
  },
}
`;

exports[`Campaign metrics helper tests transformToCampaignsPerformanceTable should return defaults for missing data 1`] = `
{
  "campaign1": {
    "campaignSalesCount": 0,
    "clickThroughRate": 0,
    "clicks": 0,
    "clicksConversionRate": 0,
    "clicksConverted": 0,
    "clicksRate": 0,
    "clicksRevenue": 0,
    "discountCodesRevenue": 0,
    "discountCodesUsed": 0,
    "engagement": 300,
    "impressions": 0,
    "ticketsConversionRate": 0,
    "ticketsConverted": 0,
    "ticketsCreated": 300,
    "ticketsCreationRate": 0,
    "ticketsRevenue": 0,
    "totalConversionRate": 0,
    "totalRevenue": 0,
    "traffic": 0,
  },
  "campaign2": {
    "campaignSalesCount": 0,
    "clickThroughRate": 0,
    "clicks": 0,
    "clicksConversionRate": 0,
    "clicksConverted": 0,
    "clicksRate": 0,
    "clicksRevenue": 0,
    "discountCodesRevenue": 0,
    "discountCodesUsed": 0,
    "engagement": 400,
    "impressions": 0,
    "ticketsConversionRate": 0,
    "ticketsConverted": 0,
    "ticketsCreated": 400,
    "ticketsCreationRate": 0,
    "ticketsRevenue": 0,
    "totalConversionRate": 0,
    "totalRevenue": 0,
    "traffic": 0,
  },
}
`;

exports[`Campaign metrics helper tests transformToCampaignsPerformanceTable should transform data from metrics to table data 1`] = `
{
  "campaign1": {
    "campaignSalesCount": 125,
    "clickThroughRate": 32.85,
    "clicks": 1000,
    "clicksConversionRate": 2,
    "clicksConverted": 20,
    "clicksRate": 10.2,
    "clicksRevenue": 3596.25,
    "discountCodesRevenue": 4567.65,
    "discountCodesUsed": 125,
    "engagement": 657,
    "impressions": 2000,
    "ticketsConversionRate": 20,
    "ticketsConverted": 60,
    "ticketsCreated": 300,
    "ticketsCreationRate": 15,
    "ticketsRevenue": 1234.47,
    "totalConversionRate": 19.025875190258752,
    "totalRevenue": 12345.67,
    "traffic": 5,
  },
  "campaign2": {
    "campaignSalesCount": 358,
    "clickThroughRate": 43.925,
    "clicks": 2000,
    "clicksConversionRate": 2,
    "clicksConverted": 40,
    "clicksRate": 21.34,
    "clicksRevenue": 3596.25,
    "discountCodesRevenue": 4567.65,
    "discountCodesUsed": 125,
    "engagement": 1757,
    "impressions": 4000,
    "ticketsConversionRate": 20,
    "ticketsConverted": 80,
    "ticketsCreated": 400,
    "ticketsCreationRate": 10,
    "ticketsRevenue": 1234.47,
    "totalConversionRate": 20.375640295959023,
    "totalRevenue": 12345.67,
    "traffic": 3,
  },
}
`;
